--- a/view/style.css
+++ b/view/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     border: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,19 +15,83 @@
     src: url(font/NanumMyeongjo-Regular.ttf);
 }
 
-body{
+body {
     background-image: url(img/fundo.png);
 }
 
-.container{
-    max-width: 400px;
-    margin: 50px auto;
+.container {
+    max-width: 500px;
+    margin: 150px 100px 0 100px;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h1{
+h1 {
     font: 600 40px 'Bricolage', sans-serif;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+label {
+    margin-bottom: 5px;
+    font: 500 18px 'Nanum', sans-serif;
+}
+
+input[type="number"] {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    font: 500 16px 'Nanum', sans-serif;
+}
+
+.stars {
+    position: absolute;
+    opacity: 0;
+    top: -.3em;
+    right: -.3em;
+    height: 100%;
+    transition: transform 300ms, opacity 150ms;
+}
+
+/* COR DA ESTRELINHA */
+.stars :nth-child(n) {
+    fill: #dc9bff; 
+}
+
+.button {
+    position: relative;
+    cursor: pointer;
+    padding: 1em 2em;
+    border: 0;
+    border-radius: .5em;
+    font-weight: bolder;
+    transition: transform 150ms, box-shadow 150ms;
+    box-shadow: 0 0 #eaadff;
+    background-color: #66217b;
+    color: #ffffff;
+    font: 600 16px 'Bricolage', sans-serif;
+}
+
+.button:hover {
+    transform: translate(.3em, -.3em);
+    box-shadow: -.3em .3em #f2cdff;
+    background-color: #6d387c;
+    transition: all 0.3s;
+}
+
+.button:hover>.stars {
+    opacity: 1;
+    transform: translate(.2em, -.2em);
+}
+
+.button:active>.stars :nth-child(n) {
+    fill: #ccc;
 }
